# monarch-semantic-similarity-profiles

./: .gitignore  Makefile  Makefile.j2  README.md  custom.Makefile  experiment.md.jinja2  generatemakefile.sh  odk.sh  profiles.yml  pyproject.toml  semsim_analysis.ipynb
scripts/sparql/: prepare-upheno-mapping.ru  preprocess_d2p.ru  preprocess_g2p.ru
src/monarch_semsim/cli/: cli.py
src/monarch_semsim/exomiser/: exomiserdb.py
tests/exomiser/: test_exomiserdb.py
